fixed pages folder, fixed the overflow for mobile view, did more sass styling,

--- a/src/components/navBar/NavBar.scss
+++ b/src/components/navBar/NavBar.scss
@@ -34,10 +34,9 @@
         a,
         a:hover,
         a:focus,
-        a:focus{
+        a:focus {
           text-decoration: none;
           color: inherit;
-          
         }
       }
     }
@@ -81,6 +80,50 @@
         }
       }
     }
+  }
+
+  .eventsCard {
+    overscroll-behavior: contain;
+    margin-top: 40px;
+    margin-bottom: 50px;
+    border-radius: 20px;
+    // padding-left: 10px;
+    padding-right: 10px;
+
+    &__eventsInfo {
+      margin-left: 20px;
+      border-bottom-style: solid;
+      border-color: gray;
+      border-width: 2px;
+    }
+
+    &__eventsTitle {
+      text-transform: uppercase;
+      font-size: 20px;
+      font-weight: 700;
+      padding-bottom: 10px;
+      padding-top: 10px;
+    }
+
+      &__eventsDate,
+  &__eventsLocation,
+  &__eventsIsFree {
+    padding-left: 20px;
+    font-size: 20px;
+    color: #757575;
+  }
+  &__eventsAge {
+    padding-left: 20px;
+    font-size: 20px;
+    color: #757575;
+    padding-bottom: 20px;
+  }
+  }
+
+  .App {
+    position: relative;
+    min-height: 96vh;
+    padding-bottom: 50px;
   }
 }
 
