--- a/src/pages/about/About.scss
+++ b/src/pages/about/About.scss
@@ -1,4 +1,9 @@
+@import '../../components/styleUtils/layouts';
+
+
 .about {
+    // @include center-and-bold;
+    text-align: center;
     margin: 0 auto;
     max-width: 800px;
     padding: 10px;
