--- a/src/pages/eventDetail/EventDetail.scss
+++ b/src/pages/eventDetail/EventDetail.scss
@@ -1,3 +1,21 @@
+@import '../../components/styleUtils/layouts';
+
+.eventDetails {
+    // @include center-and-bold;
+    text-align: center;
+    margin: 0 auto;
+    max-width: 800px;
+    padding: 10px;
+    background-color: white;
+    margin-top: 10%;
+}
+
+
+
+
+
+
+
 // @import "../../src/components/styleUtils/mobile";
 
 // @import url(https://fonts.googleapis.com/css?family=Alegreya+Sans:300);
